--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME = dulces
-DB_USERNAME = dulces_user
-DB_PASSWORD = nOrzUcp08fiQRfZGO9FKLqqdKfoHJ4ne
+DB_NAME = dulcesCaprichos
+DB_USERNAME = postgres
+DB_PASSWORD = spd00ankama
 DB_PORT = 5432
-DB_HOST = dpg-clf2favjc5ks7393hrlg-a
+DB_HOST = localhost
 SECRET_JWT = esta es mi clave
 DB_TYPE = postgres
