--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nest-typescript-starter",
   "private": true,
   "version": "1.0.0",
-  "main": "./dist/main.js",
+  "main": "./dist/src/main.js",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node ./dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
