--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,8 @@
-DB_NAME = dulcesCaprichos
-DB_USERNAME = postgres
-DB_PASSWORD = spd00ankama
-DB_PORT = 5432
-DB_HOST = localhost
-SECRET_JWT = esta es mi clave
-DB_TYPE = postgres
+DB_NAME = 
+DB_USERNAME = 
+DB_PASSWORD = 
+DB_PORT = 
+DB_HOST = 
+SECRET_JWT = 
+DB_TYPE = 
+DEPLOY_SERVER = 
