--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "migration:show": "npm run typeorm migration:show  -- -d ./db/typeorm.config.ts"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -34,6 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.1",
     "@types/nodemailer": "^6.4.13",
@@ -42,6 +44,8 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.0.0",
     "nodemailer": "^6.9.7",
     "passport-jwt": "^4.0.1",
